Enhance scenario generation in create_scenarios.py and update default configuration
- Updated config.default.yaml to set default scenario name to "all".
- Refactored create_scenarios.py to generate a comprehensive scenarios.yaml file with various configuration options including CO2 constraints, grid expansion, sector coupling, storage types, and generation mix.
- Improved scenario naming and output handling for better usability in scenario management.

These changes aim to streamline scenario creation and enhance the flexibility of configuration options for users.

--- a/config/config.default.yaml
+++ b/config/config.default.yaml
@@ -17,7 +17,7 @@ remote:
 # docs in https://pypsa-eur.readthedocs.io/en/latest/configuration.html#run
 run:
   prefix: ""
-  name: ""
+  name: "all"
   scenarios:
     enable: true
     file: config/scenarios.yaml
